# agentic_stock

./: .env.example  .gitignore  README.md  pyproject.toml  report.md
src/agentic_stock/: crew.py  main.py
src/agentic_stock/config/: agents.yaml  tasks.yaml
