[project]
name = "agentic_stock"
version = "0.1.0"
description = "agentic-stock using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
agentic_stock = "agentic_stock.main:run"
run_crew = "agentic_stock.main:run"
train = "agentic_stock.main:train"
replay = "agentic_stock.main:replay"
test = "agentic_stock.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
